artists/style-page-artist.css
@media(max-width: 799.9px) {
	.artist__details--second {
		display: none;
	}
	.bio__item {
		display: block;
	}
	.bio__date {
		margin-bottom: 0.5rem;
	}
}
@media(min-width: 800px) {
	.artist__details--first {
		display: none;
	}
	.bio__item {
		display: flex;
	}
	.bio__date--multiple {
		color: transparent;
	}
}
.artist__description:not(:empty) {
	margin-top: 1rem;
}
.artist__other {
	flex-direction: row;
	margin-bottom: 1rem;
}
.artist__other a {
	display: inline-block;
}
.artist__other div {
	flex: 1;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	width: auto;
}
.artist__next {
	text-align: right;
}
.artist__rand {
	text-align: center;
}

.lineup__container {
	background-image: radial-gradient(circle at bottom center,var(--background--bold) 1px,transparent 0);
	background-clip: content-box;
	background-position: top left;
	background-repeat: repeat;
	background-size: 3px 2rem;
	line-height: 0;
}
.lineup__container::before {
	content: "";
	display: block;
	height: 1px;
	margin-bottom: -2px;
	width: 100%;
}
.lineup__container {
	line-height: 2rem;
}
.lineup__band {
	line-height: inherit;
	vertical-align: bottom;
}
.lineup__arrow {
	color: transparent;
	display: inline-block;
	font-size: 0;
	vertical-align: bottom;
}
.lineup__arrow::before {
	color: var(--attention--faint);
	font-size: initial;
	vertical-align: middle;
}
.lineup__container .lineup__session--hovered::before,
.lineup__container .lineup__session--clicked::before{
	background: var(--attention--faint);
	color: var(--background);
}
.lineup__sessions {
	line-height: 1.5;
}
.lineup__sessions session {
	border: 1px solid transparent;
	border: 3px solid transparent;
	border: none;
	border-radius: 2px;
	-webkit-box-decoration-break: clone;
	box-decoration-break: clone;
	margin-left: -2px;
	padding: 0 0.25rem;
	padding: 1px 2px;
}
.lineup__sessions .any__note {
	padding: 2px;
	vertical-align: text-bottom;
}
.lineup__sessions session a {
	border-color: transparent !important;
	border-style: solid;
	border-width: 4px 0;
}

.lineup__sessions .lineup__session--hovered,
.lineup__sessions .lineup__session--clicked {
	/*border-color: var(--attention--faint);*/
	box-shadow: 0 0 0 1px var(--attention--faint);
}
.lineup__container session::before {
	background: var(--background--bold);
	border-radius: 2px;
	content: "※";
	display: inline-block;
	font-size: 0.9rem;
	line-height: 1;
	padding: 0.25rem;
	vertical-align: text-top;
}
.lineup__compact {
	float: right;
	margin: 0 0 0.25rem 0.25rem;
	z-index: 2;
}
.lineup--compact:checked ~ .lineup__wrapper .lineup__compact {
	color: var(--text);
}
.lineup--compact:checked ~ .lineup__wrapper .lineup__compact::before {
	clip-path: url(#symbol__checked);
}
.lineup--compact:checked ~ .lineup__wrapper .lineup--duplicate {
	display: inline-block;
	max-width: 2ch;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	display: none;
}
.lineup--compact:checked ~ .lineup__wrapper .any__note {
	display: inline-block;
	max-width: 2ch;
	overflow: hidden;
	white-space: nowrap;
	display: none;
}
.lineup--compact:checked ~ .lineup__wrapper .any__note::before {
	content: "… ";
}
.lineup--compact:checked ~ .lineup__wrapper .lineup__band > .any--en,
.lineup--compact:checked ~ .lineup__wrapper session > .any--en,
.lineup--compact:checked ~ .lineup__wrapper .lineup--duplicate + .lineup--duplicate {
	display: none;
}

.label__container {
	text-align: center;
}
.label__comma {
	display: block;
	margin: 1rem;
}
.label__company {
	text-align: center;
}
.label__line {
}
.label__next {
	align-self: center;
	color: var(--attention--faint);
	margin-left: 1rem;
	margin-right: 1rem;
}
.label__period {
	align-items: center;
	border: 1px solid var(--background);
	border-radius: 3px;
	padding: 0.5rem;
}

.bio__container {
	counter-reset: lineup;
}
.bio__item {
	margin-left: -1rem;
}
.bio__item[data-item-type~="lineup"] {
	counter-increment: lineup;
}
.bio__item[data-item-type~="lineup"] h5::after {
	content: "Lineup #" counter(lineup);
}
.bio__item[data-item-type~="lineup"] .bio__content {
	border: 3px solid var(--background--bold);
	border-radius: 3px;
	padding: 0.5rem;
}
.bio__item[data-item-type~="disbandment"] .bio__content {
	border: 3px solid var(--accent);
	border-radius: 3px;
	color: var(--accent) !important;
	padding: 0.5rem;
}
.bio__item[data-item-type~="formation"] .bio__content {
	border: 3px solid var(--attention--faint);
	border-radius: 3px;
	color: var(--attention--faint) !important;
	padding: 0.5rem;
}
.bio__item[data-item-type~="disbandment"] p:last-of-type::after {
	content: "...";
}
.bio__item:not([data-item-num="0"]) .h4 {
	color: transparent;
}
.bio__item:not([data-item-type~="release"]):not([data-item-type~="lineup"]):not([data-item-type~="schedule"]):not([data-item-type~="setlist"]) .bio__content {
	color: inherit;
	font-size: inherit;
}
.bio__item p {
	line-height: inherit;
}
.bio__date, .bio__content {
	box-sizing: border-box;
	line-height: inherit;
	margin-left: 1rem;
	vertical-align: top;
}
.bio__date {
	white-space: nowrap;
}
.bio__content {
	flex-grow: 1;
	white-space: normal;
}

.artist__main-image-link {
	display: inline-block;
	margin: -1rem 0 1rem -1rem;
	width: calc(100% + 2rem);
}
.artist__main-image {
	vertical-align: middle;
	width: 100%;
}

.images__container {
	justify-content: space-between;
	flex-wrap: wrap;
	margin: -0.5rem;
}
.images__item.images__item {
	display: block;
	height: 4rem;
	margin: 0.5rem;
	padding: 0;
	width: 4rem;
}
.images__link {
	background-size: cover;
	display: block;
	height: 100%;
}
.images__link:hover {
	opacity: 0.75;
}
#obscure-images:checked + .obscure__container {
	max-height: 11rem;
	overflow: hidden;
}
#obscure-images:checked + .obscure__container .obscure__item {
	display: initial;
}


.member__history {
	flex-wrap: wrap;
	margin-left: -1rem;
	margin-top: -1rem;
}
.lineup__container {
	flex: 1;
	flex-basis: calc(100% - 150px - 2rem);
}
.lineup__container, .lineup__sessions {
	margin-top: 1rem;
	margin-left: 1rem;
}
.lineup__sessions {
	flex-grow: 1;
	flex-basis: 150px;
	width: 100%;
}
@media(min-width: 800px) {
	.lineup__sessions {
		width: auto;
	}
}
.lineup__session + .lineup__session::before {
	content: ",  ";
}


.artist__nav {
	margin-top: -1rem;
	padding: 1rem 0;
	position: -webkit-sticky;
	position: sticky;
	top: 3rem;
	z-index: 2;
}
.artist__nav .li {
	display: block;
}
@media(max-width:799.9px) {
	.artist__nav {
		background-image: linear-gradient(var(--background--faint), var(--background--faint));
		background-position: 0 -1rem;
		background-repeat: no-repeat;
		padding: 1rem;
		padding: 0.5rem 1rem 1rem 1rem;
		text-align: center;
	}
	.artist__nav::after {
		bottom: 0;
		box-shadow: inset 0 1.5rem 1rem -1rem var(--background--faint);
		content: "";
		display: block;
		height: 1rem;
		left: 0;
		position: absolute;
		right: 0;
	}
	.artist__nav ul {
		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
	}
	.artist__nav .li {
		border: none;
		margin: 0;
		padding: 0;
	}
	.artist__nav [href*='former'], .artist__nav [href*='staff'], .artist__nav [href*='schedule'] {
		display: none;
	}
}
@media(min-width:800px) {
	.artist__nav.artist__nav {
		width: auto;
		margin-right: 3rem;
	}
}

